View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024875 | Open CASCADE | OCCT:Coding | public | 2014-04-28 15:41 | 2017-01-23 12:03 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0024875: Coding rules - eliminate GCC warning -Wstrict-aliasing in TKOpenGl | ||||
Description | GCC reports the following warnings:../../../../inc/NCollection_Vec3.hxx: In member function ‘virtual void OpenGl_Flipper::Render(const Handle_OpenGl_Workspace&) const’: ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:155: note: initialized from here ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:156: note: initialized from here ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:161: note: initialized from here ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:162: note: initialized from here ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:167: note: initialized from here ../../../../inc/NCollection_Vec3.hxx:90: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:96: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../inc/NCollection_Vec3.hxx:102: warning: dereferencing pointer ‘<anonymous>’ does break strict-aliasing rules ../../../../src/OpenGl/OpenGl_Flipper.cxx:168: note: initialized from here gcc 4.9.2 reports only the following warning: OpenGl_SceneGeometry.cxx:172, GNU C Compiler 4 (gcc), Priority: Normal dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing] | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
These warnings are not generated on current master using gcc4.9.2 within -O2, -O3, -Wall and even -Wextra options and do not present in log #0026236. |
|
Dear bugmaster, please close the issue as non-reproducible. |
|
Branch CR24875 has been created by kgv. SHA-1: 55060333d38a3d17551940015ed98c2c5a70f1f2 Detailed log of new commits: Author: kgv Date: Fri Oct 16 09:39:00 2015 +0300 0024875: Coding rules - eliminate GCC warning -Wstrict-aliasing in TKOpenGl |
|
Please check compilation of the patch in branch CR24875. |
|
Branch CR24875 has been updated forcibly by apv. SHA-1: 046f9e20091a87e7cd26baaaa6107d45a90c6021 |
|
Branch CR24875 has been rebased on the current master |
|
Dear BugMaster, Branch CR24875 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 046f9e20091a87e7cd26baaaa6107d45a90c6021 Number of compiler warnings: occt component: Linux: 7 (8 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 92092164 / 92273976 [-0.20%] Total CPU difference: 19655.599999999806 / 19657.97999999973 [-0.01%] Testing on Windows: Total MEMORY difference: 58068568 / 58086183 [-0.03%] Total CPU difference: 18695.39384149913 / 18302.583323498948 [+2.15%] |
|
Branch CR24875 has been deleted by kgv. SHA-1: 046f9e20091a87e7cd26baaaa6107d45a90c6021 |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-28 15:41 | abv | New Issue | |
2014-04-28 15:41 | abv | Assigned To | => kgv |
2014-04-28 15:49 | abv | Relationship added | related to 0024546 |
2014-10-29 13:44 | abv | Target Version | 6.8.0 => 7.1.0 |
2015-10-15 21:09 | kgv | Note Added: 0046814 | |
2015-10-15 21:09 | kgv | Assigned To | kgv => abv |
2015-10-15 21:09 | kgv | Status | new => feedback |
2015-10-15 21:09 | kgv | Target Version | 7.1.0 => 7.0.0 |
2015-10-16 09:05 | kgv | Note Added: 0046822 | |
2015-10-16 09:05 | kgv | Assigned To | abv => bugmaster |
2015-10-16 09:05 | kgv | Resolution | open => unable to reproduce |
2015-10-16 09:33 | kgv | Assigned To | bugmaster => kgv |
2015-10-16 09:33 | kgv | Status | feedback => assigned |
2015-10-16 09:38 | kgv | Summary | GCC compiler warnings on breakage of C strict aliasing rules in OpenGl => Coding rules - eliminate GCC warning -Wstrict-aliasing in TKOpenGl |
2015-10-16 09:38 | kgv | Description Updated | |
2015-10-16 09:38 | kgv | Steps to Reproduce Updated | |
2015-10-16 09:39 | git | Note Added: 0046823 | |
2015-10-16 09:39 | kgv | Note Added: 0046824 | |
2015-10-16 09:39 | kgv | Assigned To | kgv => bugmaster |
2015-10-16 09:39 | kgv | Status | assigned => resolved |
2015-10-16 09:39 | kgv | Resolution | unable to reproduce => fixed |
2015-10-16 09:39 | kgv | Status | resolved => reviewed |
2015-10-16 09:41 | kgv | Description Updated | |
2015-10-16 12:50 |
|
Assigned To | bugmaster => apv |
2015-10-16 16:58 | git | Note Added: 0047107 | |
2015-10-16 16:59 |
|
Note Added: 0047108 | |
2015-10-20 14:51 |
|
Test case number | => Not needed |
2015-10-20 14:52 |
|
Note Added: 0047222 | |
2015-10-20 14:52 |
|
Assigned To | apv => bugmaster |
2015-10-20 14:52 |
|
Status | reviewed => tested |
2015-10-23 12:30 | bugmaster | Changeset attached | => occt master fe30607a |
2015-10-23 12:30 | bugmaster | Status | tested => verified |
2016-04-17 14:42 | git | Note Added: 0053214 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |