0024875: Coding rules - eliminate GCC warning -Wstrict-aliasing in TKOpenGl